Fix CORS in SecurityConfig to use env var